Fix for issue 10595: findbugs issues
svn path=/trunk/; revision=33712


Former-commit-id: 5cceaed45c37860d44f218af7a1e68873f580cac